--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 node_modules
+dist
+lib
+.DS_Store
+logs
+*.log
+npm-debug.log*
+.eslintcache
+/coverage
+/dist
+/local
+/reports
+/node_modules
+Thumbs.db
+.idea
+.vscode
+*.sublime-project
+*.sublime-workspace
