--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": ["@babel/preset-env"]
+  "presets": [
+    "@babel/env",
+    [
+      "env",
+      {
+        "targets": {
+          "node": "6"
+        }
+      }
+    ]
+  ],
+  "plugins": ["transform-async-to-generator"]
 }
