--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=4"
   },
   "scripts": {
-    "test": "xo && nyc ava",
+    "test": "eslint ./src && nyc ava",
     "prepublishOnly": "npm run build",
     "build": "babel src --out-dir lib"
   },
@@ -32,6 +32,7 @@
     "externals"
   ],
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "html-webpack-include-assets-plugin": "^1.0.4",
     "read-pkg-up": "^4.0.0",
     "resolve-pkg": "^1.0.0"
@@ -40,56 +41,39 @@
     "webpack": "4"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
+    "ava": "^1.0.0-rc.1",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "codecov": "^3.0.4",
+    "eslint": "^5.8.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mz": "^2.6.0",
     "nyc": "^12.0.2",
+    "prettier": "^1.14.3",
     "rimraf": "^2.6.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-manifest-plugin": "2.0.0-rc.2",
-    "xo": "^0.22.0"
-  },
-  "babel": {
-    "presets": [
-      [
-        "env",
-        {
-          "targets": {
-            "node": 6
-          }
-        }
-      ]
-    ],
-    "plugins": [
-      "transform-runtime"
-    ]
-  },
-  "xo": {
-    "esnext": true,
-    "space": 4,
-    "rules": {
-      "eqeqeq": "off",
-      "no-eq-null": "off"
-    },
-    "ignores": [
-      "test/fixtures/**/*.js"
-    ]
+    "webpack-manifest-plugin": "2.0.0-rc.2"
   },
   "ava": {
+    "babel": {
+      "testOptions": {
+        "babelrc": true
+      }
+    },
     "files": [
       "test/**/*.js",
       "!test/fixtures/output/**/*"
     ],
-    "babel": "inherit",
     "require": [
-      "babel-core/register"
+      "@babel/register"
     ]
   },
   "nyc": {
