Format files for linting - Use 'babel-preset-env' to match dependency - add git ignore entries for nyc output - format files to conform with linting - relax xo linting to conform with eslint and prettier

--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
     "rules": {
       "eqeqeq": "off",
       "no-eq-null": "off",
-      "comma-dangle": "off"
+      "comma-dangle": "off",
+      "object-curly-spacing": "off",
+      "space-before-function-paren": "off",
+      "quotes": "off"
     },
     "ignores": [
       "test/fixtures/**/*.js"
